--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="inicio" class="hero-section">
             <div class="hero-content">
-                <h2>Soluciones en Hardware y Software que llevan tu experiencia al próximo nivel</h2>
+                <h2>Soluciones profesionales de Hardware y Software</h2>
                 <p>Reparación de PCs, desarrollo de aplicaciones y soporte personalizado para particulares y
                     emprendimientos.</p>
                 <a href="#contacto" class="hero-button">Solicitar presupuesto</a>
