change nav items

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <nav class="navbar-glass">
         <ul class="nav-links">
             <li><a href="#inicio" class="nav-item">Inicio</a></li>
-            <li><a href="#nosotros" class="nav-item">Nosotros</a></li>
-            <li><a href="#experiencia" class="nav-item">Experiencia</a></li>
             <li><a href="./pages/prices.html" class="nav-item">Precios</a></li>
+            <li><a href="#experiencia" class="nav-item">Preguntas frecuentes</a></li>
         </ul>
     </nav>
 
