change hero title an p

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
 
         <section id="inicio" class="hero-section">
             <div class="hero-content">
-                <h2>Soluciones profesionales de Hardware y Software</h2>
-                <p>Reparación de PCs, desarrollo de aplicaciones y soporte personalizado para particulares y
-                    emprendimientos.</p>
+                <h2>Tu aliado de confianza en tecnología</h2>
+                <p>Servicio integral en reparación y optimización de equipos para aprovechar su máximo rendimiento.</p>
                 <a href="#contacto" class="hero-button">Solicitar presupuesto</a>
             </div>
 
