unified header and navbar

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
 <body>
 
-    <header id="main-header" class="fade-in">
-        <div class="branding">
-            <h1 class="slide-up">RENDERED</h1>
-            <p class="slogan fade-delay">Soluciones digitales que impresionan</p>
+    <header id="main-header" class="fade-in unified-header">
+        <div class="header-container">
+            <div class="branding">
+                <h1 class="slide-up">RENDERED</h1>
+            </div>
+            <nav class="navbar-glass">
+                <ul class="nav-links">
+                    <li><a href="#inicio" class="nav-item">Inicio</a></li>
+                    <li><a href="./pages/prices.html" class="nav-item">Precios</a></li>
+                    <li><a href="#experiencia" class="nav-item">Preguntas frecuentes</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <nav class="navbar-glass">
-        <ul class="nav-links">
-            <li><a href="#inicio" class="nav-item">Inicio</a></li>
-            <li><a href="./pages/prices.html" class="nav-item">Precios</a></li>
-            <li><a href="#experiencia" class="nav-item">Preguntas frecuentes</a></li>
-        </ul>
-    </nav>
 
     <main>
 
