services section base

--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@
             </div>
         </section>
 
+        <section id="servicios" class="services-section">
+            <div class="services-grid">
+                <div class="services-text">
+                    <h2 class="section-title"><i class="bi bi-gear-fill"></i> Servicios</h2>
+                    <p>
+                        Ofrecemos soluciones integrales para cubrir todas tus necesidades tecnológicas.
+                        Desde la reparación de equipos hasta el desarrollo de software a medida,
+                        nos aseguramos de que tengas las herramientas adecuadas para crecer.
+                    </p>
+                </div>
+
+                <div class="services-cards">
+                    <div class="service-card">
+                        <i class="bi bi-tools"></i>
+                        <h3>Reparación de PCs</h3>
+                        <p>Diagnóstico y reparación rápida de computadoras y notebooks para que vuelvas a trabajar sin
+                            problemas.</p>
+                    </div>
+
+                    <div class="service-card">
+                        <i class="bi bi-cloud-arrow-up"></i>
+                        <h3>Desarrollo Web</h3>
+                        <p>Creamos sitios y aplicaciones web modernos, optimizados y adaptados a tus necesidades.</p>
+                    </div>
+
+                    <div class="service-card">
+                        <i class="bi bi-shield-lock"></i>
+                        <h3>Seguridad Informática</h3>
+                        <p>Protegemos tu información con soluciones antivirus, copias de seguridad y configuración
+                            segura.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <section class="history-section">
             <div class="history-grid">
