add services section

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                             segura.</p>
                     </div>
                 </div>
+
+                <div class="services-button">
+                    <a href="#precios" class="hero-button">Ver más servicios y precios</a>
+                </div>
             </div>
         </section>
 
