add why-choose section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,61 @@
             </div>
         </section>
 
+        <section id="elegirnos" class="choose-section">
+            <div class="choose-grid">
+                <div class="choose-text">
+                    <h2 class="section-title"><i class="bi bi-hand-thumbs-up-fill"></i> ¿Por qué elegirnos?</h2>
+                    <p>
+                        Nos destacamos por ofrecer un servicio transparente, confiable y pensado para cada cliente.
+                        Estas son algunas de las razones por las que cada vez más personas nos eligen:
+                    </p>
+                </div>
+
+                <div class="choose-cards">
+                    <div class="choose-card">
+                        <i class="bi bi-people-fill"></i>
+                        <h3>Atención Personalizada</h3>
+                        <p>Escuchamos tus necesidades y te ofrecemos soluciones a medida, sin rodeos ni tecnicismos
+                            innecesarios.</p>
+                    </div>
+
+                    <div class="choose-card">
+                        <i class="bi bi-cash-coin"></i>
+                        <h3>Precios Accesibles</h3>
+                        <p>Servicios de calidad a precios justos, con presupuestos claros y sin sorpresas ocultas.</p>
+                    </div>
+
+                    <div class="choose-card">
+                        <i class="bi bi-shield-check"></i>
+                        <h3>Garantía</h3>
+                        <p>Todos nuestros trabajos cuentan con garantía para que tengas la tranquilidad de un servicio
+                            seguro.</p>
+                    </div>
+
+                    <div class="choose-card">
+                        <i class="bi bi-house-door-fill"></i>
+                        <h3>Atención a Domicilio</h3>
+                        <p>Vamos hasta donde estés para que no pierdas tiempo trasladando tus equipos.</p>
+                    </div>
+
+                    <div class="choose-card">
+                        <i class="bi bi-lightning-charge-fill"></i>
+                        <h3>Entrega Rápida</h3>
+                        <p>Trabajamos con eficiencia para que tengas tu equipo o solución lista en el menor tiempo
+                            posible.</p>
+                    </div>
+
+                    <div class="choose-card">
+                        <i class="bi bi-star-fill"></i>
+                        <h3>Y muchos beneficios más</h3>
+                        <p>Asesoramiento, mantenimiento preventivo, upgrades y todo lo que necesites para estar siempre
+                            al día.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 
         <section class="history-section">
             <div class="history-grid">
