add testimonial section

--- a/index.html
+++ b/index.html
@@ -196,9 +196,73 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
         </section>
+
+        <section id="testimonios" class="testimonials-section">
+            <div class="testimonials-grid">
+                <div class="testimonials-text">
+                    <h2 class="section-title"><i class="bi bi-chat-quote-fill"></i> Testimonios de Clientes</h2>
+                    <p>
+                        La confianza de nuestros clientes es nuestra mayor garantía.
+                        Estas son algunas de sus experiencias con nuestros servicios:
+                    </p>
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <h3>María López</h3>
+                        <div class="stars">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star"></i>
+                        </div>
+                    </div>
+                    <p class="testimonial-comment">
+                        Excelente atención, me resolvieron un problema en mi notebook en menos de 24 horas.
+                        Muy amables y con precios más bajos que otros lugares que consulté.
+                    </p>
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <h3>Carlos Méndez</h3>
+                        <div class="stars">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                    </div>
+                    <p class="testimonial-comment">
+                        Me hicieron una página web para mi emprendimiento y quedó mejor de lo que esperaba.
+                        Súper profesionales y atentos en cada detalle. ¡Recomendados al 100%!
+                    </p>
+                </div>
+
+                <div class="testimonial">
+                    <div class="testimonial-header">
+                        <h3>Luciana Torres</h3>
+                        <div class="stars">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                            <i class="bi bi-star"></i>
+                        </div>
+                    </div>
+                    <p class="testimonial-comment">
+                        Pedí una reparación a domicilio y la verdad quedé encantada con la rapidez y la confianza.
+                        Me explicaron todo de manera sencilla y dejaron mi PC como nueva.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="main-footer">
