add imgs gallery

--- a/index.html
+++ b/index.html
@@ -262,6 +262,25 @@
             </div>
         </section>
 
+        <section id="galeria" class="gallery-section">
+            <div class="gallery-text">
+                <h2 class="section-title"><i class="bi bi-images"></i> Galería de Trabajos</h2>
+                <p>
+                    Algunos de los proyectos y reparaciones que realizamos.
+                    Cada equipo es tratado con la mayor dedicación para garantizar calidad y confianza.
+                </p>
+            </div>
+
+            <div class="gallery-grid">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+1" alt="PC Reparada 1">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+2" alt="PC Reparada 2">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+3" alt="PC Reparada 3">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+4" alt="PC Reparada 4">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+5" alt="PC Reparada 5">
+                <img src="https://placehold.co/600x450?text=PC+Reparada+6" alt="PC Reparada 6">
+            </div>
+        </section>
+
 
     </main>
 
