add final action section

--- a/index.html
+++ b/index.html
@@ -281,6 +281,18 @@
             </div>
         </section>
 
+        <section id="cta-final" class="cta-section">
+            <div class="cta-content">
+                <h2 class="cta-title">🚀 ¿Listo para darle nueva vida a tu PC?</h2>
+                <p class="cta-subtitle">
+                    No dejes que los problemas técnicos frenen tu productividad.
+                    Te ofrecemos <strong>reparaciones rápidas, garantía asegurada y precios accesibles</strong>.
+                </p>
+                <a href="#contacto" class="cta-button">Contáctanos Ahora</a>
+                <p class="cta-note">💡 Atención personalizada y soporte a domicilio en tu ciudad.</p>
+            </div>
+        </section>
+
 
     </main>
 
