--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RENDERED</title>
+    <title>RENDERED - Inicio</title>
     <link rel="stylesheet" href="./assets/styles/styles.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -21,7 +21,7 @@
                 <ul class="nav-links">
                     <li><a href="#inicio" class="nav-item">Inicio</a></li>
                     <li><a href="./pages/prices.html" class="nav-item">Precios</a></li>
-                    <li><a href="#experiencia" class="nav-item">Preguntas frecuentes</a></li>
+                    <li><a href="./pages/faq.html" class="nav-item">Preguntas frecuentes</a></li>
                 </ul>
             </nav>
         </div>
