--- a/pages/prices.html
+++ b/pages/prices.html
@@ -4,28 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RENDERED - Precios</title>
     <link rel="stylesheet" href="../assets/styles/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 </head>
 
 <body>
 
-    <header id="main-header" class="fade-in">
-        <div class="branding">
-            <h1 class="slide-up">RENDERED</h1>
-            <p class="slogan fade-delay">Soluciones digitales que impresionan</p>
+    <header id="main-header" class="fade-in unified-header">
+        <div class="header-container">
+            <div class="branding">
+                <h1 class="slide-up">RENDERED</h1>
+            </div>
+            <nav class="navbar-glass">
+                <ul class="nav-links">
+                    <li><a href="../index.html" class="nav-item">Inicio</a></li>
+                    <li><a href="./prices.html" class="nav-item">Precios</a></li>
+                    <li><a href="./faq.html" class="nav-item">Preguntas frecuentes</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-
-    <nav class="navbar-glass">
-        <ul class="nav-links">
-            <li><a href="../index.html" class="nav-item">Inicio</a></li>
-            <li><a href="#nosotros" class="nav-item">Nosotros</a></li>
-            <li><a href="#experiencia" class="nav-item">Experiencia</a></li>
-            <li><a href="./precios.html" class="nav-item">Precios</a></li>
-        </ul>
-    </nav>
 
     <section class="services-section">
         <div class="services-container">
