change acordion faq

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -31,81 +31,66 @@
             <div class="faq-grid">
                 <h2 class="section-title"><i class="bi bi-question-circle-fill"></i> Preguntas Frecuentes</h2>
                 <p>
-                    Respondemos las dudas más comunes sobre nuestros servicios para que tengas toda la información que
-                    necesitas.
+                    Aquí resolvemos las dudas más comunes de nuestros clientes.
                 </p>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq1">
-                    <label for="faq1">¿Qué tipo de equipos reparan?</label>
-                    <p class="faq-answer">Reparamos PCs, notebooks, laptops y equipos de escritorio, tanto para uso
-                        personal como profesional.</p>
+                    <h3>¿Qué tipo de equipos reparan?</h3>
+                    <p>Reparamos PCs, notebooks, laptops y equipos de escritorio, tanto para uso personal como
+                        profesional.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq2">
-                    <label for="faq2">¿Ofrecen garantía en los servicios?</label>
-                    <p class="faq-answer">Sí, todos nuestros trabajos cuentan con garantía según el tipo de reparación o
-                        servicio realizado.</p>
+                    <h3>¿Ofrecen garantía en los servicios?</h3>
+                    <p>Sí, todos nuestros trabajos cuentan con garantía según el tipo de reparación o servicio
+                        realizado.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq3">
-                    <label for="faq3">¿Tienen atención a domicilio?</label>
-                    <p class="faq-answer">Sí, ofrecemos servicio a domicilio para reparaciones y diagnósticos rápidos en
-                        tu ubicación.</p>
+                    <h3>¿Tienen atención a domicilio?</h3>
+                    <p>Sí, ofrecemos servicio a domicilio para reparaciones y diagnósticos rápidos en tu ubicación.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq4">
-                    <label for="faq4">¿Cuánto tiempo tarda una reparación?</label>
-                    <p class="faq-answer">Depende del problema, pero en promedio las reparaciones simples se realizan en
-                        24-48 horas.</p>
+                    <h3>¿Cuánto tiempo tarda una reparación?</h3>
+                    <p>Depende del problema, pero en promedio las reparaciones simples se realizan en 24-48 horas.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq5">
-                    <label for="faq5">¿Cómo calculan los precios?</label>
-                    <p class="faq-answer">Nuestros precios son accesibles y se calculan según el tipo de servicio y la
-                        complejidad de la reparación.</p>
+                    <h3>¿Cómo calculan los precios?</h3>
+                    <p>Nuestros precios son accesibles y se calculan según el tipo de servicio y la complejidad de la
+                        reparación.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq6">
-                    <label for="faq6">¿Hacen desarrollo de software o páginas web?</label>
-                    <p class="faq-answer">Sí, desarrollamos sitios web, landing pages, aplicaciones web y sistemas a
-                        medida según tus necesidades.</p>
+                    <h3>¿Hacen desarrollo de software o páginas web?</h3>
+                    <p>Sí, desarrollamos sitios web, landing pages, aplicaciones web y sistemas a medida según tus
+                        necesidades.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq7">
-                    <label for="faq7">¿Puedo llevar mi equipo directamente a su taller?</label>
-                    <p class="faq-answer">Por supuesto, puedes traer tu equipo a nuestro taller o solicitar atención a
-                        domicilio.</p>
+                    <h3>¿Puedo llevar mi equipo directamente a su taller?</h3>
+                    <p>Por supuesto, puedes traer tu equipo a nuestro taller o solicitar atención a domicilio.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq8">
-                    <label for="faq8">¿Ofrecen soporte post-servicio?</label>
-                    <p class="faq-answer">Sí, brindamos asesoramiento y soporte después de la reparación para cualquier
-                        duda o ajuste.</p>
+                    <h3>¿Ofrecen soporte post-servicio?</h3>
+                    <p>Sí, brindamos asesoramiento y soporte después de la reparación para cualquier duda o ajuste.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq9">
-                    <label for="faq9">¿Qué métodos de pago aceptan?</label>
-                    <p class="faq-answer">Aceptamos efectivo, transferencias bancarias y pagos digitales según tu
-                        conveniencia.</p>
+                    <h3>¿Qué métodos de pago aceptan?</h3>
+                    <p>Aceptamos efectivo, transferencias bancarias y pagos digitales según tu conveniencia.</p>
                 </div>
 
                 <div class="faq-item">
-                    <input type="checkbox" id="faq10">
-                    <label for="faq10">¿Tienen promociones o descuentos?</label>
-                    <p class="faq-answer">Sí, ocasionalmente ofrecemos promociones y descuentos. Consulta nuestras redes
-                        o contáctanos para más información.</p>
+                    <h3>¿Tienen promociones o descuentos?</h3>
+                    <p>Sí, ocasionalmente ofrecemos promociones y descuentos. Consulta nuestras redes o contáctanos para
+                        más información.</p>
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer class="main-footer">
