--- a/pages/prices.html
+++ b/pages/prices.html
@@ -49,29 +49,54 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Mantenimiento general</td>
-                            <td>Limpiza interna, actualización de software y optimización del sistema.</td>
-                            <td>$5.000</td>
+                            <td><b>Service completo</b></td>
+                            <td><b>Limpieza Hardware + Formateo e instalación de S.O. + BackUp 100GB + Cambio a SSD (si es necesario).</b></td>
+                            <td><b>$50.000</b></td>
                         </tr>
                         <tr>
-                            <td>Reinstalación de sistema operativo</td>
-                            <td>Instalación limpia con drivers, actualizaciones y programas esenciales.</td>
-                            <td>$6.500</td>
+                            <td>Formateo de Sistema Operativo (S.O.)</td>
+                            <td>Formateo e instalación de Sistema Operativo con BackUp 100GB.</td>
+                            <td>$30.000</td>
                         </tr>
                         <tr>
-                            <td>Recuperación de datos</td>
-                            <td>Intento de recuperación en discos dañados o borrados.</td>
-                            <td>Desde $7.000</td>
+                            <td>Limpieza de Hardware</td>
+                            <td>Limpieza a fondo del hardware + cambio de pasta térmica + lubricación de ventiladores.</td>
+                            <td>$40.000</td>
                         </tr>
                         <tr>
-                            <td>Armado o mejora de PC</td>
-                            <td>Asesoramiento, armado y configuración de equipos a medida.</td>
-                            <td>A convenir</td>
+                            <td>Armado de PC</td>
+                            <td>Ensamble de PC + instalación de Sistema Operativo a elección.</td>
+                            <td>Desde $50.000 - según el ensamble</td>
                         </tr>
                         <tr>
-                            <td>Desarrollo web</td>
-                            <td>Landing page, portfolio o sitio institucional responsive y optimizado.</td>
-                            <td>Desde $30.000</td>
+                            <td>Cambio de componente de Hardware x1</td>
+                            <td>Cambió de componente de Hardware por actualización o mal funcionamiento.</td>
+                            <td>$20.000</td>
+                        </tr>
+                        <tr>
+                            <td>Visita a domicilio</td>
+                            <td>Visita a domicilio por hora.</td>
+                            <td>$15.000</td>
+                        </tr>
+                        <tr>
+                            <td>BackUp de datos cada 100GB extras</td>
+                            <td>BackUp de archivos para no perder ningún tipo de información.</td>
+                            <td>$10.000</td>
+                        </tr>
+                        <tr>
+                            <td>Instalación de programas comerciales</td>
+                            <td>Instalación de programas comerciales provistos por el cliente.</td>
+                            <td>$11.000</td>
+                        </tr>
+                        <tr>
+                            <td>Instalación de programas OpenSource</td>
+                            <td>Instalación de programas de código abierto, libre de licencia.</td>
+                            <td>$10.000</td>
+                        </tr>
+                        <tr>
+                            <td>Conexión remota por hora</td>
+                            <td>Conexión remota para solución de problemas generales.</td>
+                            <td>$10.000</td>
                         </tr>
                     </tbody>
                 </table>
