add strong styles

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -49,9 +49,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td><b>Service completo</b></td>
-                            <td><b>Limpieza Hardware + Formateo e instalación de S.O. + BackUp 100GB + Cambio a SSD (si es necesario).</b></td>
-                            <td><b>$50.000</b></td>
+                            <td><strong>Service completo</strong></td>
+                            <td><strong>Limpieza Hardware + Formateo e instalación de S.O. + BackUp 100GB + Cambio a SSD (si es necesario).</strong></td>
+                            <td><strong>$50.000</strong></td>
                         </tr>
                         <tr>
                             <td>Formateo de Sistema Operativo (S.O.)</td>
