--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <h2 class="cta-title">🚀 ¿Listo para darle nueva vida a tu PC?</h2>
                 <p class="cta-subtitle">
                     No dejes que los problemas técnicos frenen tu productividad.
-                    Te ofrecemos <strong>reparaciones rápidas, garantía asegurada y precios accesibles</strong>.
+                    Te ofrecemos <b>reparaciones rápidas, garantía asegurada y precios accesibles</b>.
                 </p>
                 <a href="#contacto" class="cta-button">Contáctanos Ahora</a>
                 <p class="cta-note">💡 Atención personalizada y soporte a domicilio en tu ciudad.</p>
