change services cards

--- a/index.html
+++ b/index.html
@@ -56,28 +56,31 @@
 
                 <div class="services-cards">
                     <div class="service-card">
+                        <i class="bi bi-search-heart"></i>
+                        <h3>Diagnósticos y revisiones</h3>
+                        <p>Diagnóstico y revisión de tu equipo informático de forma rápida y sin costo.</p>
+                    </div>
+
+                    <div class="service-card">
                         <i class="bi bi-tools"></i>
-                        <h3>Reparación de PCs</h3>
-                        <p>Diagnóstico y reparación rápida de computadoras y notebooks para que vuelvas a trabajar sin
-                            problemas.</p>
+                        <h3>Mantenimiento // Limpieza</h3>
+                        <p>Mantenimientos preventivos para lograr el máximo rendimiento de tu equipo, tanto de hardware como de software.</p>
                     </div>
 
                     <div class="service-card">
-                        <i class="bi bi-cloud-arrow-up"></i>
-                        <h3>Desarrollo Web</h3>
-                        <p>Creamos sitios y aplicaciones web modernos, optimizados y adaptados a tus necesidades.</p>
+                        <i class="bi bi-download"></i>
+                        <h3>Instalación de software</h3>
+                        <p>Instalamos los programas o software necesario a elección para que no falte nada en tu computadora.</p>
                     </div>
-
                     <div class="service-card">
-                        <i class="bi bi-shield-lock"></i>
-                        <h3>Seguridad Informática</h3>
-                        <p>Protegemos tu información con soluciones antivirus, copias de seguridad y configuración
-                            segura.</p>
+                        <i class="bi bi-hdd"></i>
+                        <h3>Respaldo de datos</h3>
+                        <p>Realizamos respaldo y copias de seguridad para que tus datos e información importante esté siempre a salvo.</p>
                     </div>
                 </div>
 
                 <div class="services-button">
-                    <a href="#precios" class="hero-button">Ver más servicios y precios</a>
+                    <a href="./pages/prices.html" class="hero-button">Ver más servicios y precios</a>
                 </div>
             </div>
         </section>
