--- a/index.html
+++ b/index.html
@@ -64,18 +64,21 @@
                     <div class="service-card">
                         <i class="bi bi-tools"></i>
                         <h3>Mantenimiento // Limpieza</h3>
-                        <p>Mantenimientos preventivos para lograr el máximo rendimiento de tu equipo, tanto de hardware como de software.</p>
+                        <p>Mantenimientos preventivos para lograr el máximo rendimiento de tu equipo, tanto de hardware
+                            como de software.</p>
                     </div>
 
                     <div class="service-card">
                         <i class="bi bi-download"></i>
                         <h3>Instalación de software</h3>
-                        <p>Instalamos los programas o software necesario a elección para que no falte nada en tu computadora.</p>
+                        <p>Instalamos los programas o software necesario a elección para que no falte nada en tu
+                            computadora.</p>
                     </div>
                     <div class="service-card">
                         <i class="bi bi-hdd"></i>
                         <h3>Respaldo de datos</h3>
-                        <p>Realizamos respaldo y copias de seguridad para que tus datos e información importante esté siempre a salvo.</p>
+                        <p>Realizamos respaldo y copias de seguridad para que tus datos e información importante esté
+                            siempre a salvo.</p>
                     </div>
                 </div>
 
@@ -310,11 +313,13 @@
             <div class="social-icons">
                 <h2>Redes</h2>
                 <div class="icons-row">
-                    <a href="#" class="icon" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+                    <a href="http://wa.me/+543512046426" class="icon" aria-label="WhatsApp" target="_blank"><i
+                            class="bi bi-whatsapp"></i></a>
                     <a href="https://www.instagram.com/renderedts/" target="_blank" class="icon"
                         aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="icon" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-                    <a href="#" class="icon" aria-label="GitHub"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mario-juli%C3%A1n-molina-torres-2a8bb7247/" class="icon"
+                        aria-label="LinkedIn" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="icon" aria-label="GitHub" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
