--- a/pages/faq.html
+++ b/pages/faq.html
@@ -104,11 +104,13 @@
             <div class="social-icons">
                 <h2>Redes</h2>
                 <div class="icons-row">
-                    <a href="#" class="icon" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+                    <a href="http://wa.me/+543512046426" class="icon" aria-label="WhatsApp" target="_blank"><i
+                            class="bi bi-whatsapp"></i></a>
                     <a href="https://www.instagram.com/renderedts/" target="_blank" class="icon"
                         aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="#" class="icon" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-                    <a href="#" class="icon" aria-label="GitHub"><i class="bi bi-github"></i></a>
+                    <a href="https://www.linkedin.com/in/mario-juli%C3%A1n-molina-torres-2a8bb7247/" class="icon"
+                        aria-label="LinkedIn" target="_blank"><i class="bi bi-linkedin"></i></a>
+                    <a href="#" class="icon" aria-label="GitHub" target="_blank"><i class="bi bi-github"></i></a>
                 </div>
             </div>
         </div>
