--- a/pages/prices.html
+++ b/pages/prices.html
@@ -84,12 +84,12 @@
                             <td>$10.000</td>
                         </tr>
                         <tr>
-                            <td>Instalación de programas comerciales</td>
+                            <td>Instalación de programas comerciales x1</td>
                             <td>Instalación de programas comerciales provistos por el cliente.</td>
                             <td>$11.000</td>
                         </tr>
                         <tr>
-                            <td>Instalación de programas OpenSource</td>
+                            <td>Instalación de programas OpenSource x1</td>
                             <td>Instalación de programas de código abierto, libre de licencia.</td>
                             <td>$10.000</td>
                         </tr>
