--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="hero-content">
                 <h2>Tu aliado de confianza en tecnología</h2>
                 <p>Servicio integral en reparación y optimización de equipos para aprovechar su máximo rendimiento.</p>
-                <a href="#contacto" class="hero-button">Solicitar presupuesto</a>
+                <a id="budget-button" class="hero-button">Solicitar presupuesto por WhatsApp <i class="bi bi-whatsapp"></i></a>
             </div>
 
             <div class="hero-gallery">
@@ -332,7 +332,7 @@
         <i class="bi bi-arrow-up"></i>
     </a>
 
-    <script src="./main.js"></script>
+    <script src="./assets/scripts/main.js"></script>
 </body>
 
 </html>
