delete history section and refactor some cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="hero-content">
                 <h2>Tu aliado de confianza en tecnología</h2>
                 <p>Servicio integral en reparación y optimización de equipos para aprovechar su máximo rendimiento.</p>
-                <a id="budget-button" class="hero-button">Solicitar presupuesto por WhatsApp <i class="bi bi-whatsapp"></i></a>
+                <a id="budget-button" class="hero-button">Solicitar presupuesto por WhatsApp <i
+                        class="bi bi-whatsapp"></i></a>
             </div>
 
             <div class="hero-gallery">
@@ -114,9 +115,9 @@
 
                     <div class="choose-card">
                         <i class="bi bi-shield-check"></i>
-                        <h3>Garantía</h3>
-                        <p>Todos nuestros trabajos cuentan con garantía para que tengas la tranquilidad de un servicio
-                            seguro.</p>
+                        <h3>Garantía y rapidez</h3>
+                        <p>Con garantía y eficiencia, te aseguramos un servicio seguro y tu equipo listo en el menor
+                            tiempo posible.</p>
                     </div>
 
                     <div class="choose-card">
@@ -124,82 +125,22 @@
                         <h3>Atención a Domicilio</h3>
                         <p>Vamos hasta donde estés para que no pierdas tiempo trasladando tus equipos.</p>
                     </div>
-
-                    <div class="choose-card">
-                        <i class="bi bi-lightning-charge-fill"></i>
-                        <h3>Entrega Rápida</h3>
-                        <p>Trabajamos con eficiencia para que tengas tu equipo o solución lista en el menor tiempo
-                            posible.</p>
-                    </div>
-
-                    <div class="choose-card">
-                        <i class="bi bi-star-fill"></i>
-                        <h3>Y muchos beneficios más</h3>
-                        <p>Asesoramiento, mantenimiento preventivo, upgrades y todo lo que necesites para estar siempre
-                            al día.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-
-        <section class="history-section">
-            <div class="history-grid">
-                <div class="history-text">
-                    <h2 class="section-title">Nuestra Historia</h2>
-                    <p>
-                        Todo comenzó cuando tenía apenas 6 años y toqué por primera vez una computadora con Windows XP.
-                        Fue amor a primera vista. Lo que para otros era solo una herramienta, para mí fue una puerta a
-                        otro
-                        mundo: un mundo que quería entender, explorar y modificar a mi manera.
-                    </p>
-                    <p>
-                        Desde chico, me la pasaba desarmando, arreglando y volviendo a romper, solo para entender cómo
-                        funcionaba todo.
-                        Aprendí de forma autodidacta, modeando juegos, experimentando con programas, limpiando virus y
-                        resucitando máquinas que otros daban por perdidas. Ese impulso nunca se apagó.
-                    </p>
-                    <p>
-                        Así nació <strong>RENDERED</strong>, mi espacio personal y profesional para hacer lo que más
-                        amo: ayudar a las personas
-                        y negocios a resolver sus problemas informáticos y crecer en el mundo digital.
-                    </p>
-                    <p>
-                        Hoy, combino la experiencia en mantenimiento y reparación de computadoras con mi camino en el
-                        desarrollo web y
-                        de sistemas fullstack, para ofrecer soluciones completas: desde revivir una notebook lenta hasta
-                        construir una
-                        landing page o un sistema a medida.
-                    </p>
-                    <p>
-                        ¿Por qué <strong>Render</strong>? Porque así me llaman desde siempre. Y porque renderizar es más
-                        que una palabra técnica:
-                        es el proceso de dar forma, hacer visible, convertir una idea en realidad. Eso es lo que hago
-                        cada día en <strong>RENDERED</strong>.
-                    </p>
                 </div>
 
-                <div class="mission-sidebar">
-                    <div class="mission-card">
+                <div class="mvv-section">
+                    <div class="mvv-item">
                         <h3><i class="bi bi-bullseye"></i> Misión</h3>
                         <p>Brindar soluciones tecnológicas eficientes y confiables que impulsen la transformación
                             digital de nuestros clientes.</p>
                     </div>
-                    <div class="mission-card">
-                        <h3><i class="bi bi-eye"></i> Visión</h3>
+                    <div class="mvv-item">
+                        <h3><i class="bi bi-eye-fill"></i> Visión</h3>
                         <p>Ser referentes en innovación tecnológica, destacándonos por la calidad, ética y compromiso
                             con el crecimiento sostenible.</p>
                     </div>
-                    <div class="mission-card">
+                    <div class="mvv-item">
                         <h3><i class="bi bi-stars"></i> Valores</h3>
-                        <ul>
-                            <li>🔹 Compromiso</li>
-                            <li>🔹 Innovación</li>
-                            <li>🔹 Transparencia</li>
-                            <li>🔹 Trabajo en equipo</li>
-                            <li>🔹 Orientación al cliente</li>
-                        </ul>
+                        <p>Compromiso, Innovación, Transparencia, Trabajo en equipo, Orientación al cliente.</p>
                     </div>
                 </div>
             </div>
@@ -298,7 +239,6 @@
                 <p class="cta-note">💡 Atención personalizada y soporte a domicilio en tu ciudad.</p>
             </div>
         </section>
-
 
     </main>
 
