change choose title icon

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section id="elegirnos" class="choose-section">
             <div class="choose-grid">
                 <div class="choose-text">
-                    <h2 class="section-title"><i class="bi bi-hand-thumbs-up-fill"></i> ¿Por qué elegirnos?</h2>
+                    <h2 class="section-title"><i class="bi bi-patch-check-fill"></i> ¿Por qué elegirnos?</h2>
                     <p>
                         Nos destacamos por ofrecer un servicio transparente, confiable y pensado para cada cliente.
                         Estas son algunas de las razones por las que cada vez más personas nos eligen:
