--- a/index.html
+++ b/index.html
@@ -230,13 +230,15 @@
 
         <section id="cta-final" class="cta-section">
             <div class="cta-content">
-                <h2 class="cta-title">🚀 ¿Listo para darle nueva vida a tu PC?</h2>
+                <h2 class="cta-title"><i class="bi bi-rocket-takeoff-fill"></i> ¿Listo para darle nueva vida a tu PC?
+                </h2>
                 <p class="cta-subtitle">
                     No dejes que los problemas técnicos frenen tu productividad.
                     Te ofrecemos <b>reparaciones rápidas, garantía asegurada y precios accesibles</b>.
                 </p>
                 <a href="#contacto" class="cta-button">Contáctanos Ahora</a>
-                <p class="cta-note">💡 Atención personalizada y soporte a domicilio en tu ciudad.</p>
+                <p class="cta-note"><i class="bi bi-lightbulb-fill"></i> Atención personalizada y soporte a domicilio en
+                    tu ciudad.</p>
             </div>
         </section>
 
