--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
                         class="bi bi-whatsapp"></i></a>
             </div>
 
-            <div class="hero-gallery">
-                <img src="https://placehold.co/350x220?text=PC+Reparada" alt="Ejemplo reparación">
-                <img src="https://placehold.co/350x220?text=App+Web" alt="Ejemplo de App Web">
-                <img src="https://placehold.co/350x220?text=Mantenimiento+Notebook" alt="Ejemplo mantenimiento">
+            <div class="hero-gallery carousel">
+                <div class="carousel-track">
+                    <img src="./assets/img/c1.jpg" alt="Ejemplo reparación">
+                    <img src="./assets/img/c2.jpg" alt="Ejemplo de App Web">
+                    <img src="./assets/img/c3.jpg" alt="Ejemplo mantenimiento">
+                </div>
             </div>
         </section>
 
