add imgs on gallery

--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
             </div>
 
             <div class="gallery-grid">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+1" alt="PC Reparada 1">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+2" alt="PC Reparada 2">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+3" alt="PC Reparada 3">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+4" alt="PC Reparada 4">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+5" alt="PC Reparada 5">
-                <img src="https://placehold.co/600x450?text=PC+Reparada+6" alt="PC Reparada 6">
+                <img src="./assets/img/g1.jpg" alt="PC Reparada 1">
+                <img src="./assets/img/g2.jpg" alt="PC Reparada 2">
+                <img src="./assets/img/g3.jpg" alt="PC Reparada 3">
+                <img src="./assets/img/g4.jpg" alt="PC Reparada 4">
+                <img src="./assets/img/g5.jpg" alt="PC Reparada 5">
+                <img src="./assets/img/g6.jpg" alt="PC Reparada 6">
             </div>
         </section>
 
